@@ -196,20 +196,6 @@ name|org
 operator|.
 name|apache
 operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|Constants
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
 name|solr
 operator|.
 name|handler
@@ -3441,43 +3427,26 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|assumeFalse
+comment|// we're not (directly) using a Mockito based mock class here because it won't have a consistent class name
+comment|// that will work with DriverManager's class bindings
+name|MockDriver
+name|mockDriver
+init|=
+operator|new
+name|MockDriver
 argument_list|(
-literal|"In Java 9, Class.forName() does not work for mock classes"
-argument_list|,
-name|Constants
-operator|.
-name|JRE_IS_MINIMUM_JAVA9
+name|connection
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|DriverManager
 operator|.
 name|registerDriver
 argument_list|(
-name|driver
+name|mockDriver
 argument_list|)
 expr_stmt|;
 try|try
 block|{
-name|when
-argument_list|(
-name|driver
-operator|.
-name|connect
-argument_list|(
-name|notNull
-argument_list|()
-argument_list|,
-name|notNull
-argument_list|()
-argument_list|)
-argument_list|)
-operator|.
-name|thenReturn
-argument_list|(
-name|connection
-argument_list|)
-expr_stmt|;
 name|props
 operator|.
 name|put
@@ -3486,10 +3455,9 @@ name|JdbcDataSource
 operator|.
 name|DRIVER
 argument_list|,
-name|driver
+name|MockDriver
 operator|.
-name|getClass
-argument_list|()
+name|class
 operator|.
 name|getName
 argument_list|()
@@ -3503,7 +3471,9 @@ name|JdbcDataSource
 operator|.
 name|URL
 argument_list|,
-literal|"jdbc:fakedb"
+name|MockDriver
+operator|.
+name|MY_JDBC_URL
 argument_list|)
 expr_stmt|;
 name|props
@@ -3576,7 +3546,7 @@ name|DriverManager
 operator|.
 name|deregisterDriver
 argument_list|(
-name|driver
+name|mockDriver
 argument_list|)
 expr_stmt|;
 block|}
@@ -4268,6 +4238,220 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 return|;
+block|}
+comment|/**    * A stub driver that returns our mocked connection for connection URL {@link #MY_JDBC_URL}.    *<p>    * This class is used instead of a Mockito mock because {@link DriverManager} uses the class    * name to lookup the driver and also requires the driver to behave in a sane way, if other    * drivers are registered in the runtime. A simple Mockito mock is likely to break    * depending on JVM runtime version. So this class implements a full {@link Driver},    * so {@code DriverManager} can do whatever it wants to find the correct driver for a URL.    */
+DECL|class|MockDriver
+specifier|public
+specifier|static
+specifier|final
+class|class
+name|MockDriver
+implements|implements
+name|Driver
+block|{
+DECL|field|MY_JDBC_URL
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|MY_JDBC_URL
+init|=
+literal|"jdbc:fakedb"
+decl_stmt|;
+DECL|field|conn
+specifier|private
+specifier|final
+name|Connection
+name|conn
+decl_stmt|;
+DECL|method|MockDriver
+specifier|public
+name|MockDriver
+parameter_list|()
+throws|throws
+name|SQLException
+block|{
+throw|throw
+operator|new
+name|AssertionError
+argument_list|(
+literal|"The driver should never be directly instantiated by DIH's JdbcDataSource"
+argument_list|)
+throw|;
+block|}
+DECL|method|MockDriver
+name|MockDriver
+parameter_list|(
+name|Connection
+name|conn
+parameter_list|)
+throws|throws
+name|SQLException
+block|{
+name|this
+operator|.
+name|conn
+operator|=
+name|conn
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|acceptsURL
+specifier|public
+name|boolean
+name|acceptsURL
+parameter_list|(
+name|String
+name|url
+parameter_list|)
+throws|throws
+name|java
+operator|.
+name|sql
+operator|.
+name|SQLException
+block|{
+return|return
+name|MY_JDBC_URL
+operator|.
+name|equals
+argument_list|(
+name|url
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|connect
+specifier|public
+name|Connection
+name|connect
+parameter_list|(
+name|String
+name|url
+parameter_list|,
+name|Properties
+name|info
+parameter_list|)
+throws|throws
+name|java
+operator|.
+name|sql
+operator|.
+name|SQLException
+block|{
+return|return
+name|acceptsURL
+argument_list|(
+name|url
+argument_list|)
+condition|?
+name|conn
+else|:
+literal|null
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getMajorVersion
+specifier|public
+name|int
+name|getMajorVersion
+parameter_list|()
+block|{
+return|return
+literal|1
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getMinorVersion
+specifier|public
+name|int
+name|getMinorVersion
+parameter_list|()
+block|{
+return|return
+literal|0
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|getParentLogger
+specifier|public
+name|java
+operator|.
+name|util
+operator|.
+name|logging
+operator|.
+name|Logger
+name|getParentLogger
+parameter_list|()
+throws|throws
+name|java
+operator|.
+name|sql
+operator|.
+name|SQLFeatureNotSupportedException
+block|{
+throw|throw
+operator|new
+name|java
+operator|.
+name|sql
+operator|.
+name|SQLFeatureNotSupportedException
+argument_list|()
+throw|;
+block|}
+annotation|@
+name|Override
+DECL|method|getPropertyInfo
+specifier|public
+name|java
+operator|.
+name|sql
+operator|.
+name|DriverPropertyInfo
+index|[]
+name|getPropertyInfo
+parameter_list|(
+name|String
+name|url
+parameter_list|,
+name|Properties
+name|info
+parameter_list|)
+throws|throws
+name|SQLException
+block|{
+return|return
+operator|new
+name|java
+operator|.
+name|sql
+operator|.
+name|DriverPropertyInfo
+index|[
+literal|0
+index|]
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|jdbcCompliant
+specifier|public
+name|boolean
+name|jdbcCompliant
+parameter_list|()
+block|{
+comment|// we are not fully compliant:
+return|return
+literal|false
+return|;
+block|}
 block|}
 block|}
 end_class
